// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > matches snapshot (default variant) 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 px-4 text-center"
>
  <div
    class="w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mb-4"
  >
    <svg
      class="w-12 h-12 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </div>
  <h3
    class="text-lg font-semibold text-gray-900 mb-2"
  >
    No events
  </h3>
  <p
    class="text-gray-600 max-w-sm mb-6"
  >
    Create your first event.
  </p>
</div>
`;

exports[`EmptyState > matches snapshot (search variant) 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 px-4 text-center"
>
  <div
    class="w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mb-4"
  >
    <svg
      class="w-12 h-12 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </div>
  <h3
    class="text-lg font-semibold text-gray-900 mb-2"
  >
    No results
  </h3>
  <p
    class="text-gray-600 max-w-sm mb-6"
  >
    Try again.
  </p>
</div>
`;

exports[`ErrorState > matches snapshot (default error type) 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 px-4 text-center"
>
  <div
    class="w-16 h-16 bg-red-100 rounded-full flex items-center justify-center mb-4"
  >
    <div
      class="text-red-600"
    >
      <svg
        class="w-8 h-8"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
  <h3
    class="text-xl font-bold text-gray-900 mb-2"
  >
    Something went wrong
  </h3>
  <p
    class="text-gray-600 max-w-md mb-6"
  >
    Something went wrong.
  </p>
  <div
    class="flex flex-wrap gap-3 justify-center"
  />
</div>
`;

exports[`ErrorState > matches snapshot (notFound type) 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 px-4 text-center"
>
  <div
    class="w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mb-4"
  >
    <div
      class="text-gray-600"
    >
      <svg
        class="w-8 h-8"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
  <h3
    class="text-xl font-bold text-gray-900 mb-2"
  >
    Not Found
  </h3>
  <p
    class="text-gray-600 max-w-md mb-6"
  >
    Page not found.
  </p>
  <div
    class="flex flex-wrap gap-3 justify-center"
  />
</div>
`;

exports[`LoadingState > matches snapshot (skeleton) 1`] = `
<div
  class="space-y-4 animate-pulse"
>
  <div
    class="h-8 bg-gray-200 rounded w-1/4"
  />
  <div
    class="h-4 bg-gray-200 rounded w-3/4"
  />
  <div
    class="h-4 bg-gray-200 rounded w-1/2"
  />
</div>
`;

exports[`LoadingState > matches snapshot (spinner) 1`] = `
<div
  class="flex flex-col items-center justify-center py-12"
>
  <div
    class="w-12 h-12 border-4 border-purple-200 border-t-purple-600 rounded-full animate-spin mb-4"
  />
  <p
    class="text-gray-600 font-medium"
  >
    Loading...
  </p>
</div>
`;
